--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
+adium-theme-ubuntu==0.3.4
+configparser==3.5.0
+kafka-python==1.4.4
+kerberos==1.3.0
+numpy==1.15.4
+pandas==0.23.4
+patsy==0.5.1
+Pillow==5.4.1
+pure-sasl==0.5.1
+python-dateutil==2.7.5
+pytz==2018.9
+redis==3.0.1
+scikits.statsmodels==0.3.1
+scipy==1.2.0
+six==1.12.0
+statsmodels==0.9.0
 thrift==0.9.3
-pure-sasl
-kerberos
+unity-lens-photos==1.0
