--- a/krb5.conf
+++ b/krb5.conf
@@ -12,7 +12,7 @@ udp_preference_limit = 1
 kdc_timeout = 3000
 [realms]
 EXAMPLE.COM = {
-kdc = k8s-alpha-master
-admin_server = k8s-alpha-master
+kdc = REALMS_KDC
+admin_server = REALMS_ADMIN_SERVER
 }
 [domain_realm]
