--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-adium-theme-ubuntu==0.3.4
+xgboost
 configparser==3.5.0
 kafka-python==1.4.4
 kerberos==1.3.0
@@ -15,4 +15,3 @@ scipy==1.2.0
 six==1.12.0
 statsmodels==0.9.0
 thrift==0.9.3
-unity-lens-photos==1.0
