--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ xgboost
 configparser==3.5.0
 kafka-python==1.4.4
 kerberos==1.3.0
+MySQL-python==1.2.5
 numpy==1.15.4
 pandas==0.23.4
 patsy==0.5.1
@@ -10,6 +11,7 @@ pure-sasl==0.5.1
 python-dateutil==2.7.5
 pytz==2018.9
 redis==3.0.1
+schedule==0.6.0
 scikits.statsmodels==0.3.1
 scipy==1.2.0
 six==1.12.0
